<resources>
    <string name="app_name">FlyId</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="riwayat_pesanan">Riwayat Pesanan</string>
    <string name="maaf_anda_harus_login_terlebih_dahulu">Maaf, anda harus login terlebih dahulu</string>
    <string name="masuk">Masuk</string>
    <string name="masukan_otp">Masukan OTP</string>
    <string name="ketik_6_digit_kode_yang_dikirimkan">Ketik 6 digit kode yang dikirimkan</string>
    <string name="ke">ke</string>
    <string name="minta_kode_baru_via_email">minta kode baru via email</string>
    <string name="kirim_ulang_otp_dalam_60_detik">kirim ulang otp dalam 60 detik</string>
    <string name="akun">Akun</string>
    <string name="todo">TODO</string>
    <string name="promosi">Promosi</string>
    <string name="logout">Logout</string>
    <string name="message">message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tanggal_berangkat">Tanggal berangkat</string>
    <string name="sabtu_5_maret_2023">Sabtu, 5 Maret 2023</string>
    <string name="tanggal_pulang">Tanggal pulang</string>
    <string name="selasa_8_maret_2023">Selasa, 8 Maret 2023</string>
    <string name="pilih">Pilih</string>
    <string name="harga">Harga -</string>
    <string name="termurah">Termurah</string>
    <string name="paling_awal">Paling Awal</string>
    <string name="keberangkatan">Keberangkatan -</string>
    <string name="paling_akhir">Paling Akhir</string>
    <string name="kedatangan">Kedatangan -</string>
    <string name="selamat">Selamat</string>
    <string name="transaksi_pembayaran_tiket_sukses">Transaksi Pembayaran Tiket sukses!</string>
    <string name="terbitkan_tiket">Terbitkan Tiket</string>
    <string name="maaf_tiket_terjual_habis">Maaf, Tiket terjual habis!</string>
    <string name="coba_cari_perjalanan_lainnya">Coba cari perjalanan Lainnya!</string>
    <string name="ubah_pencarian">Ubah Pencarian</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="keluar">Keluar</string>
    <string name="biodata_pemesan">Biodata Pemesan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama">Nama</string>
    <string name="punya_nama_keluarga">Punya Nama Keluarga?</string>
    <string name="nama_keluarga">Nama Keluarga</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="emailtv">email</string>
    <string name="simpan">Simpan</string>
    <string name="biodata_penumpang">Biodata Penumpang</string>
    <string name="lanjut_pilih_kursi">Lanjut Pilih Kursi</string>
    <string name="rincian_penerbangan">Rincian Penerbangan</string>
    <string name="rincian_harga">Rincian Harga</string>
    <string name="_2_adult">2 Adult</string>
    <string name="idr_9_550_000">IDR 9.550.000</string>
    <string name="_2_child">2 Child</string>
    <string name="_1_baby">1 Baby</string>
    <string name="idr_0">IDR 0</string>
    <string name="tax">Tax</string>
    <string name="idr_300_000">IDR 300.000</string>
    <string name="promo">Promo</string>
    <string name="total">Total</string>
    <string name="idr_9_850_000">IDR 9.850.000</string>
    <string name="lanjut_pembayaran">Lanjut Pembayaran</string>
    <string name="pilihan_penerbangan">Pilihan Penerbangan</string>
    <string name="jakarta_melbourne"><![CDATA[Jakarta -> Melbourne]]></string>
    <string name="_4h_0m">(4h 0m)</string>
    <string name="_07_00">07:00</string>
    <string name="_3_maret_2023">3 Maret 2023</string>
    <string name="soekarno_hatta_terminal_1a_domestik">Soekarno Hatta - Terminal 1A Domestik</string>
    <string name="jet_air_economy">Jet Air-Economy</string>
    <string name="jt_203">JT - 203</string>
    <string name="informasi">Informasi:</string>
    <string name="baggage_20_kg_ncabin_baggage_7_kg_nin_flight_entertainment">Baggage 20 kg\nCabin baggage 7 kg\nIn Flight Entertainment</string>
    <string name="_11_00">11:00</string>
    <string name="melbourne_international_airport">Melbourne International Airport</string>
    <string name="idr_4_950_000_pax">IDR 4.950.000/pax</string>
    <string name="unpaid">Unpaid</string>
    <string name="booking_code">Booking code :</string>
    <string name="_45653657">45653657</string>
    <string name="jkt_mlb_2_penumpang_economy"><![CDATA[JKT > MLB - 2 Penumpang - Economy]]></string>
    <string name="filter">Filter</string>
    <string name="mencari_penerbangan_terbaik">Mencari penerbangan terbaik...</string>
    <string name="maaf_pencarian_anda_tidak_ditemukan">Maaf, pencarian Anda tidak ditemukan</string>
    <string name="coba_cari_perjalanan_lain">Coba cari perjalanan Lain</string>
    <string name="hei_mau_kemana">Hei, Mau kemana?</string>
    <string name="from">from</string>
    <string name="jakarta_jkta">Jakarta (JKTA)</string>
    <string name="to">to</string>
    <string name="bali_dps">Bali (DPS)</string>
    <string name="pulang_pergi">Pulang-pergi?</string>
    <string name="departure">Departure</string>
    <string name="_1_maret_2023">1 Maret 2023</string>
    <string name="Return">Return</string>
    <string name="pilih_tanggal">pilih tanggal</string>
    <string name="passengers">Passengers</string>
    <string name="_1_penumpang">1 Penumpang</string>
    <string name="seat_class">Seat Class</string>
    <string name="bussiness">Bussiness</string>
    <string name="cari_penerbangan">Cari Penerbangan</string>
    <string name="destination_favorite">Destination Favorite</string>
    <string name="contoh_example_gmail_com">Contoh : Example@gmail.com</string>
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="reset_password">Reset Password</string>
    <string name="silahkan_cek_email_anda_nkembali_ke_halaman_login_tekan_tombol_login">Silahkan cek email anda\nKembali ke halaman login tekan tombol login</string>
    <string name="login">Login</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="_0">0</string>
    <string name="verification">Verification</string>
    <string name="proses_pembayaran">Proses Pembayaran</string>
    <string name="_2_adults_1_baby">2 Adults, 1 Baby</string>
    <string name="keberangkatann">Keberangkatan</string>
    <string name="jakarta">Jakarta</string>
    <string name="_5_maret_2023">5 Maret 2023</string>
    <string name="_19_10">19.10</string>
    <string name="melbourne">Melbourne</string>
    <string name="_21_10">21.10</string>
    <string name="kepulangan">Kepulangan</string>
    <string name="economy">Economy</string>
    <string name="gopay">Gopay</string>
    <string name="username">username</string>
    <string name="nomor_gopay">Nomor Gopay</string>
    <string name="_08237238237">08237238237</string>
    <string name="expiry_date">Expiry date</string>
    <string name="_07_24">07/24</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_number">Card number</string>
    <string name="_4480_0000_0000_0000">4480 0000 0000 0000</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="john_doe">John Doe</string>
    <string name="cvv">CVV</string>
    <string name="_000">000</string>
    <string name="bayar">Bayar</string>
    <string name="Class">Class</string>
    <string name="daftar">Daftar</string>
    <string name="_62">+62</string>
    <string name="buat_password">Buat Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_di_sini">Masuk di sini</string>
    <string name="mencari_riwayat_pemesanan">Mencari riwayat pemesanan...</string>
    <string name="oops_riwayat_pesanan_anda_kosong">Oops! Riwayat pesanan anda kosong!</string>
    <string name="anda_belum_melakukan_pesanan">Anda belum melakukan pesanan</string>
    <string name="pilih_kursi_jkt_mlb_economy"><![CDATA[Pilih Kursi (JKT > MLB - Economy)]]></string>
    <string name="ubah_data_profil">Ubah Data Profil</string>
    <string name="data_diri">Data Diri</string>
    <string name="_62_897823232">+62 897823232</string>
    <string name="youremail_gmail_com">youremail@gmail.com</string>
    <string name="today_only">Today Only!</string>
    <string name="_07_20">07:20</string>
    <string name="jkt">JKT</string>
    <string name="direct">Direct</string>
    <string name="_11_20">11:20</string>
    <string name="mlb">MLB</string>
    <string name="idr_5_950_000">IDR 5.950.000</string>
    <string name="jet_airline_economy">Jet Airline - Economy</string>
    <string name="rabu">Rabu</string>
    <string name="_02_03_2023">02/03/2023</string>
    <string name="limited">Limited</string>
    <string name="jakarta_bangkok"><![CDATA[Jakarta -> Bangkok]]></string>
    <string name="air_asia">Air Asia</string>
    <string name="_20_30_maret_2023">20 - 30 Maret 2023</string>
    <string name="mulai_dari">Mulai dari</string>
    <string name="idr_950_000">IDR 950.000</string>
    <string name="penumpang_1">Penumpang 1:</string>
    <string name="mr_harry_potter">Mr. Harry Potter</string>
    <string name="id">ID:</string>
    <string name="_123456">123456</string>
    <string name="penumpang_2">Penumpang 2:</string>
    <string name="miss_hermione">Miss Hermione</string>
    <string name="_789658">789658</string>
    <string name="passenger_1_adult">Passenger 1 - Adult</string>
    <string name="title">Title</string>
    <string name="mr">Mr.</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="yyyy_mm_hh">yyyy-mm-hh</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="ktp_paspor">KTP/Paspor</string>
    <string name="ktp_passport_number">ktp / passport number</string>
    <string name="negara_penerbit">Negara Penerbit</string>
    <string name="berlaku_sampai">Berlaku sampai</string>
    <string name="kedatangann">Kedatangan</string>
    <string name="_20_maret_14_04">20 Maret, 14:04</string>
    <string name="dapatkan_potongan_50_tiket">Dapatkan Potongan 50% Tiket!</string>
    <string name="syarat_dan_ketentuan_berlaku">Syarat dan Ketentuan berlaku!</string>
    <string name="_12">12</string>
    <string name="mr_harry_potter_spasi">Mr. Harry Potter</string>
    <string name="id_spasi">ID:</string>
    <string name="_123456_spasi">123456</string>
    <string name="_19_30">19:30</string>
    <string name="_4h_0m_">4h 0m</string>
    <string name="_23_10">23:10</string>
    <string name="booking_code_">Booking code :</string>
    <string name="_453716288_">453716288</string>
    <string name="class_">Class :</string>
    <string name="list_destination">list destination</string>
    <string name="p1">P1</string>
    <string name="economy_64_seats_available">Economy - 64 Seats Available</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="dewasa">Dewasa</string>
    <string name="_12_tahun_keatas">(12 tahun keatas)</string>
    <string name="_1">1</string>
    <string name="anak">Anak</string>
    <string name="_2_11_tahun">(2-11 tahun)</string>
    <string name="_0_">0</string>
    <string name="bayi">Bayi</string>
    <string name="dibawah_2_tahun">(Dibawah 2 tahun)</string>
    <string name="idr_2_500_000">IDR 2.500.000</string>
    <string name="premium_economy">Premium Economy</string>
    <string name="idr_4_500_000">IDR 4.500.000</string>
    <string name="business">Business</string>
    <string name="idr_7_500_000">IDR 7.500.000</string>
</resources>