<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.riwayat.RiwayatNonLoginFragment">

    <TextView
        android:id="@+id/TitleRiwayatPesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riwayat_pesanan"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="12dp"
        android:textColor="#151515"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_harus_login_riwayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/maaf_anda_harus_login_terlebih_dahulu"
        android:textColor="#151515"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleRiwayatPesanan" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_illustration_man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_harus_login_riwayat" />

    <Button
        android:id="@+id/btnMasukRiwayat"
        style="@style/Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/poppins_bold"
        android:lineHeight="20dp"
        android:text="@string/masuk"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>